# agentic-memory-governance-poc

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TASKS.md  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
agents/: ADVERSARIAL_REVIEWER.md  IMPLEMENTER.md
sample_app/: __init__.py  cli.py
sample_app/application/: __init__.py  orders.py
sample_app/domain/: __init__.py  order.py
sample_app/infrastructure/: __init__.py  sqlite_orders.py
scripts/: lab  lab-hook
src/lab/: __init__.py  __main__.py  cli.py
src/lab/governance/: __init__.py  engine.py  model.py
src/lab/governance/checks/: __init__.py  platform.py
src/lab/hooks/: __init__.py  _adapter.py  claude_adapter.py  codex_adapter.py  core.py
src/lab/memory/: __init__.py  model.py  renderer.py  repository.py  retrieval.py
src/lab/runs/: __init__.py  baseline.py  launch.py  manifest.py  workspace.py
tests/adversarial/: test_platform_canary.py
tests/contract/: test_governance_engine.py  test_hook_adapters.py  test_memory_repository.py  test_order_service.py  test_scaffold.py
tests/integration/: test_memory_cli.py  test_memory_retrieval_cli.py  test_order_cli.py  test_run_lifecycle.py
tests/unit/: test_governance_checks.py  test_memory.py  test_order.py  test_retrieval.py
