[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-governance-lab"
version = "0.1.0"
description = "Experimental platform for agent memory and governance"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
lab = "lab.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["lab*", "sample_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "sample_app", "tests"]
